# trash_panda

./: .gitignore  README.md  pyproject.toml  trash_panda.code-workspace
setup/: install_mssql_odbc.sh
src/common/: __init__.py  environment_config.py  sql_config.py
src/scratch/: test_config.py
